--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
     <button
       (click)="checkColor(color)"
       [ngStyle]="{'background-color': color.btnColor, 'color': color.textColor}"
-      [disabled] = "color.isSelected || correct" >
+      [disabled] = "color.isSelected || correct"
+      (mouseenter) = "color.mouseenter()"
+      (mouseleave) = "color.mouseleave()"
+    >
       {{color.name}}
       <fa-icon *ngIf = "color.isSelected" [icon] = "['fas', color.icon]"></fa-icon>
     </button>
